tests/snapshots/examples_fixtures/type_system__failing__157_match_tuple_missing_catchall_general.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/157_match_tuple_missing_catchall_general.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/157_match_tuple_missing_catchall_general.flx:28:14
   |
28 |     let _x = match t {
   |              ^^^^^^^^^
29 |         (1, true) -> 1,
   | ^^^^^^^^^^^^^^^^^^^^^^^
30 |         (2, false) -> 2,
   | ^^^^^^^^^^^^^^^^^^^^^^^^
31 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
